--- a/cardexamples/main.html
+++ b/cardexamples/main.html
@@ -1,18 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="card1.css">
+    <link rel="stylesheet" href="card2.css">
+    <link rel="stylesheet" href="card3.css">
+    <link rel="stylesheet" href="card4.css">
+    <link rel="stylesheet" href="card5.css">
 </head>
+
 <body>
     <div class="container">
         <div class="box">
-            card1qöğpwmwpğqmqwp
+
+            <div class="card1">
+                Card Sample
+            </div>
         </div>
+
+        <div class="box">
+
+            <div class="card2">
+                <div class="card-content"></div>
+                <div class="card-item-1"></div>
+                <div class="card-item-2"></div>
+                <div class="card-item-3"></div>
+            </div>
+        </div>
+
+        <div class="box">
+
+            <div class="card3">
+                <div class="card-content">Card 3</div>
+                <div class="card-item-1"></div>
+                <div class="card-item-2"></div>
+                <div class="card-item-3"></div>
+                <div class="card-item-4"></div>
+            </div>
+        </div>
+
+        <div class="box">
+
+            <div class="card4">
+                <div class="card-top-shape"></div>
+                <div class="card-avatar">
+                    <img src="https://e7.pngegg.com/pngimages/799/987/png-clipart-computer-icons-avatar-icon-design-avatar-heroes-computer-wallpaper-thumbnail.png"
+                        alt="avatar image">
+                </div>
+                <div class="card-name">Emircan</div>
+                <div class="card-descr">Software Developer</div>
+                <button class="card-button">Click me!</button>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="box">
+        <div class="card5">
+            <div class="card-img">
+                <img src="" alt="">
+            </div>
+        </div>
+        <div class="title"></div>
+        <div class="price">
+            999.999
+        </div>
+        <div class="card-action"></div>
     </div>
 
 
 </body>
+
 </html>
