The responsive navbar and side bar have been completed

--- a/navbarexamples/main.html
+++ b/navbarexamples/main.html
@@ -31,8 +31,16 @@
         <a href="">about</a>
     </nav>
 
-    <script src="main.js"></script>
+    <div class="container">
+        
+    </div>
 
+
+
+
+
+
+    <script src="main.js"></script>
 </body>
 
 </html>
