The new js files and css classes have been added and navbar and subnavbar have been completed.

--- a/subnavbar/main.html
+++ b/subnavbar/main.html
@@ -9,11 +9,27 @@
 </head>
 
 <body>
+    <nav class="main-nav">
+        <a href="">Phones</a>
+        <a href="">Desktops</a>
+        <a href="">Accessories</a>
+        <a href="">Furniture</a>
+    </nav>
+    <nav class="sub-nav">
+      
+        <a href="">Sub nav item</a>
+        <a href="">Sub nav item</a>
+        <a href="">Sub nav item</a>
+        <a href="">Sub nav item</a>
+        <a href="">Sub nav item</a>
+
+    </nav>
     <div class="container">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, eum quisquam iste voluptas, voluptatem ipsa
-        nesciunt ab ea cumque hic eius, placeat numquam magni laboriosam laudantium reiciendis iure atque perferendis.
+        content
     </div>
+
+    <script type="module" src="main.js"></script>
 </body>
 
-<script src="main.js"></script>
+
 </html>
